<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00008B"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="146dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="3dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="430dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/line"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="163dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/fname"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/lname"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="63dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="217dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="401dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sch"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="289dp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="400dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="340dp" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="400dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hp"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="394dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        app:backgroundTint="#00BCD4"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="480dp" />

</androidx.constraintlayout.widget.ConstraintLayout>